Snapshot creation writes distinct non-null tags to database
Expanded unit testing, along with refactoring of SnapshotDaoTest for more code reuse and automatic resource cleanup.